Template de agregar emisora creado (aun falta integracion con google maps)

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_segmento.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_segmento.html
@@ -28,7 +28,7 @@
         <label>Horairos</label>
         <div class="form-group">
             <div class="form-row">
-                <div class="form-grpup col-md-4">
+                <div class="form-group col-md-4">
                     <label for="diaInput">Dia</label>
                     <select id="diaInput" class="custom-select form-control">
                         <option value="Lunes">Lunes</option>
