--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -86,4 +86,7 @@
     </div>
 </div>
 {% endblock %}
-{% block script %}<script src="{% static 'webAdminRadio/js/navbar.js' %}"></script>{% endblock %}
+{% block script %}
+<script src="{% static 'webAdminRadio/js/navbar.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+{% endblock %}
