--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -64,13 +64,14 @@
             </li>
         </ul>
     </nav>
-    <!-- Contenido de la página -->
+    <!-- Barra de navegación -->
     <div id="content" class="">
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom">
             <div class="container-fluid">
                 <button type="button" id="sidebarCollapse" class="btn btn-info btn-navbar">
                     <i class="fas fa-bars"></i>
                 </button>
+                <span class="navbar-text">{{ user.username }}</span>
             </div>
         </nav>
         <div class="navbar navbar-expand-lg navbar-light bg-light navbar-title">
