--- a/AppRadio/accounts/templates/accounts/login.html
+++ b/AppRadio/accounts/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends 'webAdminRadio/base.html' %}
 {% load static from staticfiles %}
-{% block styles %}<link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/login.css' %}">{% endblock %}
+{% block styles %}<link rel="stylesheet" type="text/css" href="{% static 'accounts/css/login.css' %}">{% endblock %}
 {% block login %}
 <div class="container">
     <div class="main-div">
@@ -10,8 +10,10 @@
                 <div class="img-container">
                     <img src="{% static 'webAdminRadio/images/logo.png' %}">
                 </div>
+                {% for message in messages %}
+                <small><i class="fas fa-exclamation-triangle"></i>{{ message }}</small>
+                {% endfor %}
                 <!-- Tiene que mostrarse solo si el login falla -->
-                <small><i class="fas fa-exclamation-triangle"></i>Nombre de usuario o contraseña incorrectos</small>
                 <div class="login-header">
                     <h4 class="login-title">Administración de AppRadio</h4>
                 </div>
@@ -28,7 +30,7 @@
                         <button type="submit" class="btn btn-primary login">Iniciar Sesión</button>
                     </div>
                     {% if request.GET.next %}
-                        <input type="hidden" name="next" value="{{ next }}">
+                        <input type="hidden" name="next" value="{{ request.GET.next }}">
                     {% endif %}
                 </div>
             </form>
