--- a/static_cdn/webAdminRadio/css/segmento.css
+++ b/static_cdn/webAdminRadio/css/segmento.css
@@ -9,3 +9,12 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+#btn-eliminar-div {
+    position: relative;
+}
+
+#btn-eliminar {
+    position: absolute;
+    bottom: 0;
+}
