--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -11,7 +11,7 @@
         <ul class="list-unstyled components">
             <p>Menú</p>
             <li class="active">
-                <a href="#"><i class="fas fa-home fa-fw"></i><span></span>Principal</a>
+                <a href="{% url 'webadminradio:home' %}"><i class="fas fa-home fa-fw"></i><span></span>Principal</a>
             </li>
             <li>
                 <a href="#"><i class="fas fa-broadcast-tower"></i>Emisoras</a>
