--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_segmento.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_segmento.html
@@ -3,11 +3,11 @@
 {% block page_style %}<link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/segmento.css' %}">{% endblock %}
 {% block content %}
     <h4><b>Información del segmento</b></h4>
-    <form id="addSegmento">
+    <form id="addSegmento" onsubmit="return validate()">
         <div class="form-group">
             <label for="emisoraSelect">Emisora</label>
-            <select id="emisoraSelect" class="custom-select form-control">
-                <option selected>Seleccione la emisora</option>
+            <select id="emisoraSelect" class="custom-select form-control" name="dia" oninvalid="this.setCustomValidity('Ingrese un nombre para el segmento')" required>
+                <option selected disabled>Seleccione la emisora</option>
                 <option value="1">Emisora 1</option>
                 <option value="2">Emisora 2</option>
                 <option value="3">Emisora 3</option>
@@ -15,15 +15,15 @@
         </div>
         <div class="form-group">
             <label for="nombreInput">Nombre</label>
-            <input id="nombreInput" type="text" class="form-control" placeholder="Ingrese el nombre del segmento">
+            <input id="nombreInput" name="nombre" type="text" class="form-control" placeholder="Ingrese el nombre del segmento" oninvalid="this.setCustomValidity('Ingrese un nombre para el segmento')" oninput="this.setCustomValidity('')" required>
         </div>
         <div class="form-group">
             <label for="resenaInput">Reseña Publicitaria</label>
-            <input id="resenaInput" type="text" class="form-control" placeholder="Ejemplo: ¡El mejor show para la familia!">
+            <input id="resenaInput" name="slogan" type="text" class="form-control" placeholder="Ejemplo: ¡El mejor show para la familia!" oninvalid="this.setCustomValidity('Ingrese una reseña Publicitaria')" oninput="this.setCustomValidity('')" required>
         </div>
         <div class="form-group">
             <label for="descInput">Descripción</label>
-            <textarea class="form-control" id="descInput" rows="3" placeholder="Ingrese una breve descripción del segmento"></textarea>
+            <textarea class="form-control" id="descInput" name="descripcion" rows="3" placeholder="Ingrese una breve descripción del segmento" oninvalid="this.setCustomValidity('Ingrese una descripcion del segmento')" oninput="this.setCustomValidity('')" maxlength="250" required></textarea>
         </div>
         <label>Horarios</label>
         <div class="form-group">
@@ -34,13 +34,13 @@
         <div class="form-group">
             <div class="custom-file">
                 <label for="imgSegmento" class="custom-file-label">Imagen del Segmento</label>
-                <input type="file" class="custom-file-input" id="imgSegmento" accept=".png, .jpg, .jpeg">
+                <input type="file" name="imagen" class="custom-file-input" id="imgSegmento" accept=".png, .jpg, .jpeg" oninvalid="this.setCustomValidity('Ingrese una imagen para el segmento')" required>
                 <div class="img-holder">
                     <img id="preview" src="{% static 'webAdminRadio/images/placeholder.png' %}">
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Emisora</button>
+        <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Segmento</button>
     </form>
 {% endblock %}
 {% block page_script %}
