--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_emisora.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_emisora.html
@@ -2,6 +2,12 @@
 {% load static from staticfiles %}
 {% block page_style %}<link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/agregar_segmento.css' %}">{% endblock %}
 {% block content %}
+    {% if error %}
+        {{ error }}
+    {% endif %}
+    {% if success %}
+        <h3>{{ success }}</h3>
+    {% endif %}
     <h4><b>Información de la emisora</b></h4>
     <form id="addSegmento" method="POST" action="{% url 'webadminradio:agregar_emisora' %}">
         {% csrf_token %}
@@ -17,7 +23,7 @@
             <label for="frecuenciaInput">Frecuencia o Dial</label>
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <input required name="frecuencia" id="frecuenciaInput" type="text" class="form-control" placeholder="Ejemplo: 105.4" pattern="[0-9]{2,4}\.[0-9]">
+                    <input required name="frecuencia" id="frecuenciaInput" type="text" class="form-control" placeholder="Ejemplo: 105.4" pattern="[0-9]{2,3}\.[0-9]">
                 </div>
                 <div class="form-group col-md-2">
                 <select name="tipoFrecuencia" id="frecTipoInput" class="custom-select form-control">
@@ -74,7 +80,7 @@
                 </div>
                 <div class="form-group col-md-2">
                  <label>Provincia</label>
-                 <select name="provincia" class="custom-select form-control">
+                 <select required name="provincia" class="custom-select form-control">
                      <option disabled selected value="">Provincia</option>
                      <option value="Azuay" selected="selected">Azuay</option>
                      <option value="Cañar">Cañar</option>
@@ -104,7 +110,7 @@
                 </div>
                 <div class="form-group col-md-2">
                     <label>Ciudad</label>
-                    <input required name="ciudad" type="text" class="form-control" placeholder="Ciudad" pattern="[A-Za-z]+">
+                    <input required name="ciudad" type="text" class="form-control" placeholder="Ciudad" pattern="([A-Za-z]|\s)+">
                 </div>
             </div>
         </div>
