--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_emisora.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_emisora.html
@@ -1,12 +1,31 @@
 {% extends 'webAdminRadio/base_site.html' %}
 {% load static from staticfiles %}
-{% block page_style %}<link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/agregar_segmento.css' %}">{% endblock %}
+{% block page_style %}
+<link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/agregar_segmento.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/componentes/modal_info.css' %}">
+{% endblock %}
 {% block content %}
     {% if error %}
-        {{ error }}
+        <div id="componente_modal_info">
+                <modal-info v-if="showModal" url_redirect="">
+                    <h3 slot="header">Error</h3>
+                    <div slot="body">
+                        <p>Existen algunos errores en los siguientes campos:</p>
+                        {% for campo,e in error.items %}
+                            <h5>{{campo}}</h5>
+                            {{e}}
+                        {% endfor %}
+                    </div>
+                </modal-info>
+        </div>
     {% endif %}
     {% if success %}
-        <h3>{{ success }}</h3>
+    <div id="componente_modal_info">
+            <modal-info v-if="showModal" url_redirect="{% url 'webadminradio:emisoras' %}">
+                <h3 slot="header">Información</h3>
+                <p slot="body">{{success}}</p>
+            </modal-info>
+    </div>
     {% endif %}
     <h4><b>Información de la emisora</b></h4>
     <form id="addSegmento" method="POST" action="{% url 'webadminradio:agregar_emisora' %}">
@@ -129,4 +148,6 @@
 <script src="{% static 'webAdminRadio/js/img_preview.js' %}"></script>
 <script src="{% static 'webAdminRadio/js/componentes/TelefonoComponent.js' %}"></script>
 <script src="{% static 'webAdminRadio/js/componentes/RedSocialComponent.js' %}"></script>
+<script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
+
 {% endblock %}
