--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/emisora.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/emisora.html
@@ -1,6 +1,12 @@
 {% extends 'webAdminRadio/base_site.html' %}
 {% load static from staticfiles %}
 {% block page_style %}<link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/segmento.css' %}">{% endblock %}
+{% block agregar_button %}
+    <form class="form-inline ml-auto" action="{% url 'webadminradio:agregar_emisora' %}" method="get">
+        {% csrf_token %}
+        <button class="btn btn-primary btn-md submit" type="submit"><i class="fas fa-plus-circle"></i>Agregar emisora</button>
+    </form>
+{% endblock %}
 {% block content %}
 
 {% endblock %}
