--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -11,34 +11,34 @@
         <ul class="list-unstyled components">
             <p>Menú</p>
             <li class="active">
-                <a href="{% url 'webadminradio:home' %}"><i class="fas fa-home fa-fw"></i><span></span>Principal</a>
+                <a class="action" href="{% url 'webadminradio:home' %}"><i class="fas fa-home fa-fw"></i><span></span>Principal</a>
             </li>
             <li>
-                <a href="{% url 'webadminradio:emisoras' %}"><i class="fas fa-broadcast-tower"></i>Emisoras</a>
+                <a class="action" href="{% url 'webadminradio:emisoras' %}"><i class="fas fa-broadcast-tower"></i>Emisoras</a>
             </li>
             <li>
-                <a href="{% url 'webadminradio:segmentos' %}"><i class="fas fa-microphone"></i>Segmentos</a>
+                <a class="action" href="{% url 'webadminradio:segmentos' %}"><i class="fas fa-microphone"></i>Segmentos</a>
             </li>
             <li>
-                <a href="#"><i class="fas fa-headset"></i>Locutores</a>
+                <a class="action" href="#"><i class="fas fa-headset"></i>Locutores</a>
             </li>
             <li>
-                <a href="#"><i class="fas fa-award"></i>Concursos</a>
+                <a class="action" href="#"><i class="fas fa-award"></i>Concursos</a>
             </li>
             <li>
-                <a href="#"><i class="fas fa-clipboard-list"></i>Encuestas</a>
+                <a class="action" href="#"><i class="fas fa-clipboard-list"></i>Encuestas</a>
             </li>
             <li>
-                <a href="#"><i class="fas fa-user-friends"></i>Usuarios</a>
+                <a class="action" href="#"><i class="fas fa-user-friends"></i>Usuarios</a>
             </li>
             <li>
-                <a href="#"><i class="fas fa-edit"></i>Sugerencias</a>
+                <a class="action" href="#"><i class="fas fa-edit"></i>Sugerencias</a>
             </li>
             <li>
-                <a href="#"><i class="fas fa-ad"></i>Publicidad</a>
+                <a class="action" href="#"><i class="fas fa-ad"></i>Publicidad</a>
             </li>
             <li>
-                <a href="#"><i class="fas fa-file-alt"></i>Reportes</a>
+                <a class="action" href="#"><i class="fas fa-file-alt"></i>Reportes</a>
             </li>
         </ul>
     </nav>
