--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
@@ -1,5 +1,6 @@
 {% extends 'webAdminRadio/base_site.html' %}
 {% load static from staticfiles %}
+{% load webadmin_tags %}
 {% block cdn_stlyes %}
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
@@ -30,7 +31,12 @@
                         <th><img src="{{ segmento.imagen.url }}" width="100%"></th>
                         <th>{{ segmento.nombre }}</th>
                         <th>{{ segmento.idEmisora.nombre }}</th>
-                        <th>HORARIO!!</th>
+                        <th>
+                            {% get_horarios segmento as horarios %}
+                            {% for horario in horarios %}
+                                <p>{{ horario.idHorario }}</p>
+                            {% endfor %}
+                        </th>
                         <th>
                             <a href="#" class="btn btn-primary btn-sm" role="button"><i class="fas fa-eye"></i></a>
                             <a href="#" class="btn btn-success btn-sm" role="button"><i class="fas fa-pen"></i></a>
