--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
@@ -38,8 +38,9 @@
                             {% endfor %}
                         </th>
                         <th>
-                            <a href="#" class="btn btn-primary btn-sm" role="button"><i class="fas fa-eye"></i></a>
-                            <a href="#" class="btn btn-success btn-sm" role="button"><i class="fas fa-pen"></i></a>
+                            <!-- Botones de Ver, Modificar y Eliminar -->
+                            <a href="{% url 'webadminradio:ver_segmento' segmento.id %}" class="btn btn-primary btn-sm" role="button"><i class="fas fa-eye"></i></a>
+                            <a href="{% url 'webadminradio:editar_segmento' segmento.id %}" class="btn btn-success btn-sm" role="button"><i class="fas fa-pen"></i></a>
                             <a href="#" class="btn btn-danger btn-sm" role="button"><i class="fas fa-times"></i></a>
                         </th>
                     </tr>
