Cambio en la pantalla de segmentos, serializers y plantilla para los locutores [#159611020]

--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -20,7 +20,7 @@
                 <a class="action" href="{% url 'webadminradio:segmentos' %}"><i class="fas fa-microphone"></i>Segmentos</a>
             </li>
             <li>
-                <a class="action" href="#"><i class="fas fa-headset"></i>Locutores</a>
+                <a class="action" href="{% url 'webadminradio:locutores' %}"><i class="fas fa-headset"></i>Locutores</a>
             </li>
             <li>
                 <a class="action" href="#"><i class="fas fa-award"></i>Concursos</a>
