--- a/AppRadio/WebAdminRadio/static/webAdminRadio/css/datatables.css
+++ b/AppRadio/WebAdminRadio/static/webAdminRadio/css/datatables.css
@@ -5,4 +5,9 @@ th {
 .table-container {
     display: flex;
     justify-content: center;
+    margin: 2rem 0;
+}
+
+.custom-select {
+    width: 25%;
 }
