--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
@@ -12,6 +12,13 @@
     <a href="{% url 'webadminradio:agregar_segmento' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Segmento</i></a>
 {% endblock %}
 {% block content %}
+    <label for="emisoraSelect">Seleccione una emisora</label>
+    <select name="dia" id="emisoraSelect" class="custom-select">
+        <option selected disabled>--</option>
+        {% for emisora in emisoras %}
+            <option value="{{ emisora.id }}">{{ emisora.nombre }}</option>
+        {% endfor %}
+    </select>
     <div class="table-container">
         <table id="data_table" class="table table-striped table-bordered dt-body-center">
             <thead>
@@ -25,6 +32,7 @@
                 </tr>
             </thead>
             <tbody>
+                <!--
                 {% for segmento in segmentos %}
                     <tr>
                         <th>{{ segmento.id }}</th>
@@ -38,13 +46,19 @@
                             {% endfor %}
                         </th>
                         <th>
-                            <!-- Botones de Ver, Modificar y Eliminar -->
                             <a href="{% url 'webadminradio:ver_segmento' segmento.id %}" class="btn btn-primary btn-sm" role="button"><i class="fas fa-eye"></i></a>
                             <a href="{% url 'webadminradio:editar_segmento' segmento.id %}" class="btn btn-success btn-sm" role="button"><i class="fas fa-pen"></i></a>
                             <a href="#" class="btn btn-danger btn-sm" role="button"><i class="fas fa-times"></i></a>
                         </th>
                     </tr>
-                {% endfor %}
+                {% endfor %}-->
+                <tr>
+                <th>
+                    <a href="#" class="btn btn-primary btn-sm" role="button"><i class="fas fa-eye"></i></a>
+                    <a href="#" class="btn btn-success btn-sm" role="button"><i class="fas fa-pen"></i></a>
+                    <a href="#" class="btn btn-danger btn-sm" role="button"><i class="fas fa-times"></i></a>
+                </th>
+                </tr>
             </tbody>
         </table>
     </div>
