--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_locutor.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_locutor.html
@@ -30,33 +30,46 @@
     <h4><b>Información del Locutor</b></h4>
     <form id="addLocutor" onsubmit="return validate()" action="{% url 'webadminradio:agregar_segmento' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
+        <!-- Nombre del locutor -->
         <div class="form-group">
             <label for="nombreInput">Nombre Completo</label>
             <input id="nombreInput" name="nombre" type="text" class="form-control" placeholder="Ingrese el nombre completo del locutor" oninvalid="this.setCustomValidity('Ingrese un nombre para el segmento')" oninput="this.setCustomValidity('')" required>
         </div>
+        <!-- Fecha de Nacimiento -->
         <div class="form-group">
             <label for="fechaNac">Fecha de Nacimiento</label>
             <input id="fechaNac" name="fechaNac" type="date" class="form-control" oninvalid="this.setCustomValidity('Ingrese una fecha')" oninput="this.setCustomValidity('')" required>
         </div>
+        <!-- Teléfono -->
         <div class="form-group">
-                <label for="telefono">Teléfono</label>
-                <input id="telefono" name="telefono" type="text" class="form-control" oninvalid="this.setCustomValidity('Ingrese una fecha')" oninput="this.setCustomValidity('')" required>
-            </div>
+            <label for="telefono">Teléfono</label>
+            <input id="telefono" name="telefono" type="text" class="form-control" oninvalid="this.setCustomValidity('Ingrese una fecha')" oninput="this.setCustomValidity('')" required>
+        </div>
+        <!-- Selección de Emisora -->
         <div class="form-group">
-            <label for="segmentoSelect">Seleccione Segmento</label>
-            <select id="segmentoSelect" class="custom-select form-control" name="emisora" oninvalid="this.setCustomValidity('Ingrese una emisora válida')" required oninput="this.setCustomValidity('')">
-                <option selected disabled>Seleccione el segmento</option>
-                {% for segmento in segmentos %}
-                    <option value="{{ segmento.id }}">{{ segmento.nombre }}</option>
+            <label for="emisoraSelect">Seleccione la emisora</label>
+            <select id="emisoraSelect" class="custom-select form-control" name="emisora" oninvalid="this.setCustomValidity('Ingrese una emisora válida')" required oninput="this.setCustomValidity('')">
+                <option selected disabled>Seleccione la emisora</option>
+                {% for emisora in emisoras %}
+                    <option value="{{ emisora.id }}">{{ emisora.nombre }}</option>
                 {% endfor %}
             </select>
         </div>
+        <!-- Selección de Segmentos -->
+        <div class="form-group">
+            <label for="segmentoSelect">Seleccione Segmento</label>
+            <div id="componente_segmento">
+                <segmento></segmento>
+            </div>
+        </div>
+        <!-- Redes Sociales -->
         <div class="form-group">
             <label for="">Redes Sociales (Opcional)</label>
             <div id="componente_redsocial">
                 <redsocial></redsocial>
             </div>
         </div>
+        <!-- Imágen de perfil -->
         <div class="form-group">
             <div class="custom-file">
                 <label for="imgSegmento" class="custom-file-label">Foto</label>
@@ -66,11 +79,13 @@
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Segmento</button>
+        <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Locutor</button>
     </form>
 {% endblock %}
 {% block page_script %}
     <script src="{% static 'webAdminRadio/js/img_preview.js' %}"></script>
+    <script src="{% static 'webAdminRadio/js/locutores_segmentos.js' %}"></script>
+    <script src="{% static 'webAdminRadio/js/componentes/EmisoraComponent.js' %}"></script>
     <script src="{% static 'webAdminRadio/js/componentes/RedSocialComponent.js' %}"></script>
     <script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
 {% endblock %}
