--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/editar_segmento.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/editar_segmento.html
@@ -5,19 +5,19 @@
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/componentes/modal_info.css' %}">
 {% endblock %}
 {% block content %}
-{% if error %}
-    <div id="componente_modal_info">
-        <modal-info v-if="showModal" url_redirect="">
-            <h3 slot="header">Error</h3>
-            <div slot="body">
-                <p>Existen algunos errores en los siguientes campos:</p>
-                {% for campo,e in error.items %}
-                    <h5>{{campo}}</h5>
-                    {{e}}
-                {% endfor %}
-            </div>
-        </modal-info>
-    </div>
+    {% if error %}
+        <div id="componente_modal_info">
+            <modal-info v-if="showModal" url_redirect="">
+                <h3 slot="header">Error</h3>
+                <div slot="body">
+                    <p>Existen algunos errores en los siguientes campos:</p>
+                    {% for campo,e in error.items %}
+                        <h5>{{campo}}</h5>
+                        {{e}}
+                    {% endfor %}
+                </div>
+            </modal-info>
+        </div>
     {% endif %}
     {% if success %}
     <div id="componente_modal_info">
@@ -41,15 +41,15 @@
     </div>
     <div class="form-group">
         <label for="nombreInput">Nombre</label>
-        <input id="nombreInput" name="nombre" type="text" class="form-control" placeholder="Ingrese un nombre para el segmento" oninvalid="this.setCustomValidity('Ingrese un nombre para el segmento')" oninput="this.setCustomValidity('')" required>
+        <input id="nombreInput" name="nombre" type="text" class="form-control" value="{{ segmento.nombre }}" placeholder="Ingrese un nombre para el segmento" oninvalid="this.setCustomValidity('Ingrese un nombre para el segmento')" oninput="this.setCustomValidity('')" required>
     </div>
     <div class="form-group">
         <label for="resenaInput">Reseña Publicitaria</label>
-        <input id="resenaInput" name="slogan" type="text" class="form-control" placeholder="Ejemplo: ¡El mejor show para la familia!" oninvalid="this.setCustomValidity('Ingrese una reseña Publicitaria')" oninput="this.setCustomValidity('')" required>
+        <input id="resenaInput" name="slogan" type="text" class="form-control" value="{{ segmento.slogan }}" placeholder="Ejemplo: ¡El mejor show para la familia!" oninvalid="this.setCustomValidity('Ingrese una reseña Publicitaria')" oninput="this.setCustomValidity('')" required>
     </div>
     <div class="form-group">
         <label for="descInput">Descripción</label>
-        <textarea class="form-control" id="descInput" name="descripcion" rows="3" placeholder="Ingrese una breve descripción del segmento" oninvalid="this.setCustomValidity('Ingrese una descripcion del segmento')" oninput="this.setCustomValidity('')" maxlength="250" required></textarea>
+        <textarea class="form-control" id="descInput" name="descripcion" rows="3" placeholder="Ingrese una breve descripción del segmento" oninvalid="this.setCustomValidity('Ingrese una descripcion del segmento')" oninput="this.setCustomValidity('')" maxlength="250" required>{{ segmento.descripcion }}</textarea>
     </div>
     <label>Horarios</label>
     <div class="form-group">
