--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/locutores.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/locutores.html
@@ -7,11 +7,32 @@
 {% endblock %}
 {% block page_style %}
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/datatables.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/componentes/modal_info.css' %}">
 {% endblock %}
 {% block agregar_button %}
-    <a href="{% url 'webadminradio:agregar_locutor' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Locutor</i></a>
+    <a href="{% url 'webadminradio:asignar_locutor' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Asignar Locutor</i></a>
 {% endblock %}
 {% block content %}
+    {% if messages %}
+        <div id="componente_modal_info">
+            <modal-info v-if="showModal" url_redirect="">
+                <h3 slot="header" class="action"><i class="fas fa-info-circle"></i>Información</h3>
+                <div slot="body">
+                    {% for message in messages %}
+                        <p>{{ message }}</p>
+                    {% endfor %}
+                </div>
+            </modal-info>
+        </div>
+    {% endif %}
+    <div id="componente_borrar">
+        <modal-borrar v-if="showModal">
+            <h3 slot="header" class="action"><i class="fas fa-exclamation-triangle "></i>¡Aviso!</h3>
+            <div slot="body">
+                <p>¿Está seguro de que desea eliminar este locutor?</p>
+            </div>
+        </modal-borrar>
+    </div>
     <label for="segmentoSelect">Seleccione un segmento</label>
     <select name="dia" id="segmentoSelect" class="custom-select">
         <option selected disabled>--</option>
@@ -39,4 +60,13 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
     <script src="{% static 'webAdminRadio/js/datatables_locutores.js' %}"></script>
+    <script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
+    <script src="{% static 'webAdminRadio/js/componentes/BorrarComponent.js' %}"></script>
+    <script>
+        function showWarning(id){
+            contenedorBorrar.$data.objects_to_delete = "locutores";
+            contenedorBorrar.$data.id = id;
+            contenedorBorrar.$data.showModal = true;
+        }
+    </script>
 {% endblock %}
