--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/publicidad.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/publicidad.html
@@ -7,6 +7,7 @@
 {% endblock %}
 {% block page_style %}
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/datatables.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/componentes/modal_info.css' %}">
 {% endblock %}
 {% block agregar_button %}
     <a href="{% url 'webadminradio:agregar_publicidad' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Publicidad</i></a>
